# Chess

./: CMakeLists.txt  Doxyfile  game.cpp  game.h  gtest.cpp  helper.cpp  helper.h  main.cpp
Pieces/: Doxyfile  Pieces.h  pieces.cpp
Vector/: my_vector.cpp  my_vector.h
html/: _pieces_8h_source.html  annotated.html  class_bar_environment-members.html  class_bar_environment.html  class_base-members.html  class_base.html  class_biggest_int_convertible-members.html  class_biggest_int_convertible.html  class_child_class_with_stream_operator.html  class_child_class_without_stream_operator.html  class_clock-members.html  class_clock.html  class_comment_test.html  class_common_test-members.html  class_common_test.html  class_construct_from_t-members.html  class_construct_from_t.html  class_container_test-members.html  class_container_test.html  class_conversion_helper_base.html  class_conversion_helper_derived.html  class_counter-members.html  class_counter.html  class_custom_function_naming_test-members.html  class_custom_function_naming_test.html  class_custom_functor_naming_test-members.html  class_custom_functor_naming_test.html  class_custom_integer_naming_test-members.html  class_custom_integer_naming_test.html  class_custom_lambda_naming_test-members.html  class_custom_lambda_naming_test.html  class_custom_struct_naming_test.html  class_derived_test-members.html  class_derived_test.html  class_detect_not_instantiated_test-members.html  class_detect_not_instantiated_test.html  class_detect_not_instantiated_types_test-members.html  class_disabled_test.html  (+1061 more)
view/: view.h  (+1 more)
(+90 files in other folders)
